<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content" >

  <ListPreference
    android:key="Organization"
    android:defaultValue="ASH"
    android:summary="@string/preferences_organization"
    android:title="@string/preferences_organization_title" />

  <EditTextPreference
    android:key="Phone"
    android:dialogTitle="@string/preferences_new_number"
    android:inputType="phone"
    android:title="@string/preferences_new_number_title" />

  <EditTextPreference
    android:key="Message"
    android:dialogTitle="@string/preferences_message_dialog_title"
    android:inputType="text"
    android:title="@string/preferences_message" />

  <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
    android:key="Max"
    android:defaultValue="@integer/minSms"
    android:title="@string/preferences_max_sms_amount"
    app:vnt_maxValue="@integer/maxSms"
    app:vnt_minValue="@integer/minSms"
    app:vnt_setWrapSelectorWheel="true" />

  <Preference
    android:key="btnDateFilter"
    android:title="@string/preferences_date" />

  <Preference
    android:key="btnTimeFilter"
    android:title="@string/preferences_time" />

  <CheckBoxPreference
    android:key="Notify"
    android:widgetLayout="@layout/switch_preference"
    android:title="@string/preferences_notify" />

</PreferenceScreen>
